--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
   "name": "copy-inst",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@haskkor/react-native-pincode": "^1.22.6",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-google-signin/google-signin": "7.2.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
+    "expo-application": "~5.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-blur": "~12.2.2",
+    "expo-clipboard": "~4.1.2",
+    "expo-crypto": "~12.2.1",
+    "expo-google-drive-api-wrapper": "^1.0.2",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
+    "html-to-text": "^9.0.5",
+    "moment": "^2.29.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-web": "~0.18.10",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
