--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@expo/webpack-config": "^18.0.1",
     "@haskkor/react-native-pincode": "^1.22.6",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-google-signin/google-signin": "7.2.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -21,6 +20,7 @@
     "expo-blur": "~12.2.2",
     "expo-clipboard": "~4.1.2",
     "expo-crypto": "~12.2.1",
+    "expo-file-system": "^15.2.2",
     "expo-google-drive-api-wrapper": "^1.0.2",
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
@@ -39,7 +39,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.18.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
