--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swipe-list-view": "^3.2.9",
