--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "html-to-text": "^9.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated-carousel": "^3.3.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
