--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "~19.0.1",
     "@haskkor/react-native-pincode": "^1.22.6",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.15",
-    "expo-application": "~5.1.1",
-    "expo-auth-session": "~4.0.3",
-    "expo-blur": "~12.2.2",
-    "expo-clipboard": "~4.1.2",
-    "expo-crypto": "~12.2.1",
-    "expo-file-system": "^15.2.2",
+    "expo": "~51.0.7",
+    "expo-application": "~5.9.1",
+    "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
+    "expo-clipboard": "~6.0.3",
+    "expo-crypto": "~13.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-google-drive-api-wrapper": "^1.0.2",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-web-browser": "~12.1.1",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "html-to-text": "^9.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -33,23 +33,23 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.0.8",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.18.10",
-    "tailwindcss": "^3.3.2",
+    "react-native-web": "~0.19.10",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
